--- a/nm-broker/nm-broker-connector/src/main/resources/application.properties
+++ b/nm-broker/nm-broker-connector/src/main/resources/application.properties
@@ -36,11 +36,11 @@ server.port = 8080
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://localhost:3306/dev_db?autoReconnect=true&useSSL=true
+spring.datasource.url = jdbc:mysql://localhost:3306/nm_dev?autoReconnect=true&useSSL=true
 
 # Username and password
 spring.datasource.username = root
-spring.datasource.password = ****
+spring.datasource.password = root
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
