--- a/nm-subscription/nm-sub-implementation/src/main/resources/application.yml
+++ b/nm-subscription/nm-sub-implementation/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url : jdbc:mysql://localhost:3306/dev_db?autoReconnect=true&useSSL=true
+    url : jdbc:mysql://localhost:3306/nm_dev?autoReconnect=true&useSSL=true
     username : root
     password : root
     testWhileIdle : true
@@ -28,10 +28,10 @@ logging:
 gcaa:
   security:
     ssl:
-      key-store: META-INF/certs/xyz.jks
-      key-store-password: *******
-      trust-store: META-INF/certs/xyz.jks
-      trust-store-password: *********
+      key-store: D:/work/projects/workspce/nm/cefi/cefitest/CC0000009204_500.jks
+      key-store-password: Qq3zlmvD0MTT
+      trust-store: D:/work/projects/workspce/nm/cefi/cefitest/CC0000009204_500.jks
+      trust-store-password: Qq3zlmvD0MTT
       endpoint-url: https://www.b2b.preops.nm.eurocontrol.int/B2B_PREOPS/gateway/spec/20.5.0
       
   nm:
