--- a/nm-broker/nm-broker-connector/pom.xml
+++ b/nm-broker/nm-broker-connector/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>com.gcaa.nm</groupId>
 		<artifactId>nm-broker-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>2.0.1-RC</version>
 	</parent>
 
 	<dependencies>
@@ -51,16 +51,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-activemq</artifactId>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.11.0</version>
+		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+	<!-- build> <plugins> <plugin> <groupId>org.springframework.boot</groupId> 
+		<artifactId>spring-boot-maven-plugin</artifactId> </plugin> </plugins> </build -->
 
 </project>
