--- a/nm-broker/pom.xml
+++ b/nm-broker/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.gcaa.nm</groupId>
 	<artifactId>nm-broker-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>2.0.1-RC</version>
 	<packaging>pom</packaging>
 
 	<name>NM-Broker-Parent</name>
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>com.gcaa.nm</groupId>
 		<artifactId>gcaa-nm-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>2.0.1-RC</version>
 	</parent>
 	
 	<modules>
