--- a/nm-subscription/nm-sub-implementation/pom.xml
+++ b/nm-subscription/nm-sub-implementation/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.gcaa.nm</groupId>
         <artifactId>nm-subscription-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>2.0.1-RC</version>
     </parent>
 
     <properties>
@@ -40,27 +40,27 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency> -->
 
-         <dependency>
+<!--          <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
          <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
-        </dependency>
+        </dependency> -->
         <dependency>
         	<groupId>org.springframework.ws</groupId>
         	<artifactId>spring-ws-support</artifactId>
         </dependency>
     </dependencies>
 
-    <build>
+    <!--build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-    </build>
+    </build-->
 
 </project>
