--- a/nm-subscription/nm-sub-model/pom.xml
+++ b/nm-subscription/nm-sub-model/pom.xml
@@ -4,7 +4,7 @@
   <parent>
   	<groupId>com.gcaa.nm</groupId>
   	<artifactId>nm-subscription-parent</artifactId>
-  	<version>0.0.1-SNAPSHOT</version>
+  	<version>2.0.1-RC</version>
   </parent>
   
   <dependencies>
