--- a/nm-subscription/pom.xml
+++ b/nm-subscription/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
         <groupId>com.gcaa.nm</groupId>
 		<artifactId>gcaa-nm-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>2.0.1-RC</version>
 	</parent>
 
 	<modules>
