--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.gcaa.nm</groupId>
 	<artifactId>gcaa-nm-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>2.0.1-RC</version>
 	<packaging>pom</packaging>
 
 	<name>NM-Broker-Parent</name>
@@ -22,7 +22,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<spring.boot.version>1.5.4.RELEASE</spring.boot.version>
 		<qpid.jms.client.version>0.23.0</qpid.jms.client.version>
-		<gcaa.nm.version>0.0.1-SNAPSHOT</gcaa.nm.version>
+		<gcaa.nm.version>2.0.1-RC</gcaa.nm.version>
 		<java.version>1.8</java.version>
 	</properties>
 
