--- a/nm-engine/pom.xml
+++ b/nm-engine/pom.xml
@@ -11,7 +11,7 @@
 
 	<properties>
 		<start-class>com.gcaa.nm.EngApplication</start-class>
-		<gcaa.nm.version>2.0.1-RC</gcaa.nm.version>
+		<gcaa.nm.version>2.1.0-RC</gcaa.nm.version>
 		<java.version>1.8</java.version>
 	</properties>
 
@@ -69,10 +69,15 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>1.18</version>
+		</dependency>
 
 	</dependencies>
 
-	<!--build>
+	<!-- build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
