--- a/nm-broker/pom.xml
+++ b/nm-broker/pom.xml
@@ -5,6 +5,7 @@
 
 	<groupId>com.gcaa.nm</groupId>
 	<artifactId>nm-broker-parent</artifactId>
+	<version>2.1.0-RC</version>
 	<packaging>pom</packaging>
 
 	<name>NM-Broker-Parent</name>
